# stable-mir-json

./: .gitignore  Cargo.toml  fibonacci.explore.json  justfile
docs/: assert_eq.smir.html  assert_eq.wasm-explore.html  binop.smir.html  binop.wasm-explore.html  char-trivial.smir.html  char-trivial.wasm-explore.html  closure-args.smir.html  closure-args.wasm-explore.html  closure-no-args.smir.html  closure-no-args.wasm-explore.html  const-arithm-simple.smir.html  const-arithm-simple.wasm-explore.html  div.smir.html  div.wasm-explore.html  double-ref-deref.smir.html  double-ref-deref.wasm-explore.html  enum.smir.html  enum.wasm-explore.html  fibonacci.smir.html  fibonacci.wasm-explore.html  float.smir.html  float.wasm-explore.html  fn-ptr-in-arg.smir.html  index.html  modulo.smir.html  modulo.wasm-explore.html  mutual_recursion.smir.html  mutual_recursion.wasm-explore.html  option-construction.smir.html  option-construction.wasm-explore.html  param_types.smir.html  param_types.wasm-explore.html  primitive-type-bounds.smir.html  primitive-type-bounds.wasm-explore.html  recursion-simple-match.smir.html  recursion-simple-match.wasm-explore.html  recursion-simple.smir.html  recursion-simple.wasm-explore.html  ref-deref.smir.html  ref-deref.wasm-explore.html  (+16 more)
mir-tui/: Cargo.toml
output-typst/: assert_eq.smir.typ  binop.smir.typ  char-trivial.smir.typ  closure-args.smir.typ  closure-no-args.smir.typ  const-arithm-simple.smir.typ  div.smir.typ  double-ref-deref.smir.typ  enum.smir.typ  fibonacci.smir.typ  float.smir.typ  modulo.smir.typ  mutual_recursion.smir.typ  (+14 more)
(+24 files in other folders)
