[workspace]
members = ["mir-explorer", "mir-tui"]

[package]
name = "stable_mir_json"
version = "0.1.0"
edition = "2021"
default-run = "stable_mir_json"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dot-writer = "0.1.4"
anyhow = "1"
home = "0.5"
base64 = "0.22"

[[bin]]
name = "cargo_stable_mir_json"
path = "src/bin/cargo_stable_mir_json.rs"

[features]
debug_log = []

[package.metadata.rust-analyzer]
# This package uses rustc crates.
rustc_private=true

# Optimize mir-explorer WASM for size
[profile.release.package.mir-explorer]
opt-level = "s"

[profile.release]
lto = "thin"